# gtfs

./: .gitignore  README.md  gtfs-meta.toml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: data-issue-report.md
scripts/: bus_weekly_update.py  download_validator.py  fetch_gitlab_gtfs.py  manual_bus_update.py  manual_rail_pathways_import.py  merge_rail_pathways.py  run_validator.py  unzip_gtfs.py  zip_gtfs.py
validation-output/bus/: report.html  report.json
validation-output/current/bus/: report.html  report.json
validation-output/current/rail/: report.html  report.json
validation-output/rail/: report.html  report.json
validation-output/weekly-update/bus/: report.html  report.json
