[project]
name = "lacmta-gtfs"
version = "0.1.0"
description = "GTFS automation for LA Metro"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "poethepoet>=0.41.0",
]

[tool.lacmta-gtfs]
validator-jar = "https://github.com/MobilityData/gtfs-validator/releases/download/v7.1.0/gtfs-validator-7.1.0-cli.jar"
default-country-code = "us"

[tool.poe.tasks]
download-validator = "python scripts/download_validator.py"
validate-bus = "python scripts/run_validator.py --feed bus"
validate-rail = "python scripts/run_validator.py --feed rail"
validate-future-bus = "python scripts/run_validator.py --feed bus --timeframe future"
validate-future-rail = "python scripts/run_validator.py --feed rail --timeframe future"
validate-weekly-update-bus = "python scripts/run_validator.py --feed bus --timeframe weekly-update"
validate-weekly-update-rail = "python scripts/run_validator.py --feed rail --timeframe weekly-update"
